# SmartSchedule

./: .gitignore  CMakeLists.txt
include/core/: App.hpp
include/data/: Profile.hpp  SetMatter.hpp  Subject.hpp  SubjectTable.hpp  TimeBlock.hpp
include/logic/: ScheduleEngine.hpp
include/logic/utils/: ParseTime.hpp
include/persistence/: PersistenceManager.hpp
include/persistence/utils/: LoadFromPDF.py
include/states/: Matters.hpp  Schedule.hpp  SelectSchedule.hpp  State.hpp
include/ui/: Button.hpp  TableWidget.hpp
include/ui/adapters/: TableAdapter.hpp
resources/data/: data.txt  horario.txt
resources/saves/: 1.json  2.json  all_matter.json  all_records.json  profile.json
src/core/: App.cpp  Main.cpp
src/data/: SetMatter.cpp  SubjectTable.cpp
src/logic/: ScheduleEngine.cpp
src/logic/utils/: ParseTime.cpp
src/persistence/: PersistenceManager.cpp
src/states/: Matters.cpp  Schedule.cpp  SelectSchedule.cpp
src/ui/: Button.cpp  TableWidget.cpp
src/ui/adapters/: TableAdapter.cpp
